--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "stdio.h": "c",
         "math.h": "c",
         "corecrt_math_defines.h": "c",
-        "corecrt_math.h": "c"
+        "corecrt_math.h": "c",
+        "stdbool.h": "c"
     }
 }
