solved roman to numbers problem

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "math.h": "c",
         "corecrt_math_defines.h": "c",
         "corecrt_math.h": "c",
-        "stdbool.h": "c"
+        "stdbool.h": "c",
+        "ctype.h": "c"
     }
 }
