--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "corecrt_math.h": "c",
         "stdbool.h": "c",
         "ctype.h": "c",
-        "xstring": "cpp"
+        "xstring": "cpp",
+        "string.h": "c"
     }
 }
