--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -49,6 +49,14 @@
         "xmemory": "cpp",
         "xstddef": "cpp",
         "xtr1common": "cpp",
-        "xutility": "cpp"
+        "xutility": "cpp",
+        "stack": "cpp",
+        "deque": "cpp",
+        "cerrno": "cpp",
+        "cfloat": "cpp",
+        "climits": "cpp",
+        "ranges": "cpp",
+        "span": "cpp",
+        "string_view": "cpp"
     }
 }
