--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -59,6 +59,9 @@
         "span": "cpp",
         "string_view": "cpp",
         "queue": "cpp",
-        "algorithm": "cpp"
+        "algorithm": "cpp",
+        "unordered_map": "cpp",
+        "map": "cpp",
+        "xtree": "cpp"
     }
 }
