--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -63,6 +63,7 @@
         "unordered_map": "cpp",
         "map": "cpp",
         "xtree": "cpp",
-        "xhash": "cpp"
+        "xhash": "cpp",
+        "set": "cpp"
     }
 }
